# SURF2026_Run-Diff

./: .gitignore  CONFIGURATION.md  README.md
.github/workflows/: build.yml  release.yml
eval/src/: providers.py
populator/: edge_coverage.py  instructor_flow.py  model.py  populate.py
populator/problems/: __init__.py  bank.py
tutor/: grader.py  harness.py  leakage_eval.py  sim_student_eval.py
webapp/: network_sync_guide.md  user_guide.md
webapp/backend/: .gitignore  app.py  authoring.py  classes.py  config.py  predictor.py  publish.py  pyproject.toml  run_server.py  rundiff_backend.spec  seal.py  setup_ollama.py  state_core.py  static.py  store.py  tutor_core.py
webapp/branding/: AppIcon.icns  make-icns.sh
webapp/desktop/: README.md  main.js  pack.mjs  package.json
webapp/desktop-macos/: README.md  RunDiff.swift  build.sh
webapp/desktop-tauri/: .gitignore  README.md  prep-resources.sh
webapp/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
webapp/desktop-tauri/src-tauri/capabilities/: default.json
webapp/desktop-tauri/src-tauri/icons/: icon.icns
webapp/desktop-tauri/src-tauri/src/: main.rs
webapp/desktop-tauri/ui/: index.html
webapp/frontend/: index.html  package.json  vite.config.js
webapp/frontend/src/: App.jsx
webapp/frontend/src/components/: AuthorGate.jsx  HintLadder.jsx  SessionControls.jsx  SqlEditor.jsx  Tooltip.jsx  bits.jsx  charts.jsx
webapp/frontend/src/lib/: api.js
webapp/frontend/src/routes/: Classes.jsx  Insights.jsx  Instructor.jsx  Setup.jsx  Student.jsx
webapp/frontend/src/styles/: app.css  tokens.css
